# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.h.in  imgui.ini  launch.vs.json  package-lock.cmake
Editor/: CMakeLists.txt
Editor/src/: Application.cpp
Editor/src/GUI/: Themes.cpp  Themes.hpp
Engine/: CMakeLists.txt
Engine/src/: Engine.cpp  Engine.h  Engine.hpp  pch.h  pch.hpp
Engine/src/Core/: Application.cpp  Application.h  Entrypoint.h
Engine/src/Core/Definitions/: BuildDLL.h  Memory.h
Engine/src/Core/Layers/: DebugUILayer.cpp  DebugUILayer.h  Layer.h
Engine/src/Core/Time/: Timer.cpp  Timer.h  Timestep.h
Engine/src/Engine/Core/: Base.h  Base.hpp
Engine/src/Engine/Core/Debug/: Assert.h  Assert.hpp  Logger.cpp  Logger.hpp
Engine/src/Engine/Core/Events/: Event.h  Event.hpp  EventQueue.h  EventQueue.hpp  InputEvents.h  InputEvents.hpp  Publisher.h  Publisher.hpp  Subscriber.h  Subscriber.hpp  WindowEvents.hpp
Engine/src/Engine/Core/Events/EventBus/: EventBus.h  EventBus.hpp  EventBusTest.h
Engine/src/Engine/Core/Memory/: SmartPointers.h  SmartPointers.hpp
Engine/src/Engine/Core/Time/: Timer.cpp  Timer.h  Timer.hpp  Timestamp.h  Timestamp.hpp  Timestep.h  Timestep.hpp
Engine/src/Engine/Core/Utils/: Callback.h  ENGINE_API.hpp
Engine/src/Engine/Core/Utils/Strings/: utf.hpp
Engine/src/Engine/RenderAPI/: Buffer.hpp  Context.cpp  Context.hpp  Framebuffer.hpp  IndexBuffer.hpp  PixelBuffer.hpp  RenderAPI.hpp  Shader.hpp  ShaderStorageBuffer.hpp  Texture.hpp  UniformBuffer.hpp  VertexArray.hpp
Engine/src/Engine/RenderAPI/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLIndexBuffer.cpp  OpenGLPixelBuffer.cpp  OpenGLPixelBuffer.hpp  OpenGLShaderStorageBuffer.cpp  OpenGLShaderStorageBuffer.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Engine/src/Engine/Runtime/: Application.cpp  Application.h  Application.hpp  Entrypoint.h  Entrypoint.hpp
Engine/src/Engine/Runtime/ImGui/: ImGuiContext.cpp  ImGuiContext.h  ImGuiContext.hpp
Engine/src/Engine/Runtime/ImGui/GLFW/: ImGuiGLFWContext.cpp  ImGuiGLFWContext.hpp
Engine/src/Engine/Runtime/ImGui/OpenGL/: ImGuiOpenGLContext.cpp  ImGuiOpenGLContext.h  ImGuiOpenGLContext.hpp
Engine/src/Engine/Runtime/ImGui/SDL3/: ImGuiSDL3Context.cpp  ImGuiSDL3Context.hpp
Engine/src/Engine/Runtime/Input/: Input.h  InputContext.h  InputContext.hpp  InputHandler.cpp  InputHandler.h  InputId.hpp  InputModule.cpp  InputModule.hpp
Engine/src/Engine/Runtime/Input/Devices/: InputDevice.h
Engine/src/Engine/Runtime/Input/Devices/Keyboard/: KeyboardDevice.cpp  KeyboardDevice.h  KeyboardDevice.hpp
Engine/src/Engine/Runtime/Input/Devices/Mouse/: MouseDevice.h  MouseDevice.hpp
Engine/src/Engine/Runtime/Renderer/: Material.hpp  Mesh.hpp  Model.hpp  RenderItem.hpp  Renderer.hpp
Engine/src/Engine/Runtime/Resources/: ShaderModule.cpp  ShaderModule.hpp
Engine/src/Engine/Runtime/Scene/: Entity.cpp  Entity.hpp
Engine/src/Engine/Runtime/Systems/Renderer/: Model.hpp  Renderer.hpp
Engine/src/Engine/Runtime/Systems/Scene/: Entity.h  Scene.h
Engine/src/Engine/Runtime/Systems/Scene/Components/: TagComponent.hpp  TransformComponent.hpp
Engine/src/GUI/: ImguiContext.h  ImguiOpenGLContext.cpp  ImguiOpenGLContext.h
Engine/src/Platform/: Input.hpp  Window.cpp  Window.h  Window.hpp
Engine/src/Platform/Filesystem/: Filesystem.hpp
Engine/src/Platform/GLFW/: GLFWInput.cpp  GLFWInput.hpp
Engine/src/Platform/MultiPlatform/: MultiPlatformWindow.cpp  MultiPlatformWindow.h
Engine/src/Platform/OpenGL/: GLFWOpenGLWindow.cpp  GLFWOpenGLWindow.hpp  OpenGLWindow.cpp  OpenGLWindow.h  SDL3OpenGLWindow.cpp  SDL3OpenGLWindow.hpp
Engine/src/Platform/SDL3/: SDL3Input.cpp  SDL3Input.hpp  SDL3OpenGLWindow.cpp  SDL3OpenGLWindow.hpp
Engine/src/Platform/Vulkan/: VulkanWindow.cpp  VulkanWindow.h  VulkanWindow.hpp
Engine/src/RenderAPI/: Context.h
Engine/src/RenderAPI/OpenGL/: OpenGLContext.h
Engine/src/Systems/Renderer/: Image.h  Material.h  Mesh.h  Renderer.h  ShaderGraph.h  Texture.h
Engine/src/Systems/ResourceManager/: ModelManager.h
Engine/src/Systems/Scene/: Entity.cpp
Engine/src/Systems/Scene/Components/: DynamicMeshComponent.h  MeshComponent.h  TransformComponent.h
Engine/src/include/: Engine.h
SandBox/: CMakeLists.txt
SandBox/src/: Application.cpp
include/: config.h  config.hpp
